--- a/Hippo/UIView/TableViewCell/OutgoingImageCell/OutgoingImageCell.xib
+++ b/Hippo/UIView/TableViewCell/OutgoingImageCell/OutgoingImageCell.xib
@@ -9,53 +9,46 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="288" id="KGk-i7-Jjw" customClass="OutgoingImageCell" customModule="Hippo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="288"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="375" id="KGk-i7-Jjw" customClass="OutgoingImageCell" customModule="Hippo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="400" height="375"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="288"/>
+                <rect key="frame" x="0.0" y="0.0" width="400" height="375"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JbQ-pg-ytD" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
-                        <rect key="frame" x="104" y="4.5" width="206.5" height="280"/>
+                        <rect key="frame" x="131" y="4.5" width="259.5" height="367"/>
                     </view>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GYS-uX-poV" userLabel="MainContentView">
-                        <rect key="frame" x="104.5" y="5" width="205.5" height="279"/>
+                        <rect key="frame" x="131.5" y="5" width="258.5" height="366"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="8x2-sk-JrP" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
-                                <rect key="frame" x="5" y="5" width="195.5" height="250"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="250" id="eOn-2v-fHO"/>
-                                </constraints>
-                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="cA8-f9-uGn">
+                                <rect key="frame" x="5" y="5" width="248.5" height="250"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="8x2-sk-JrP" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="248.5" height="250"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="250" id="eOn-2v-fHO"/>
+                                        </constraints>
+                                    </imageView>
+                                    <textView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4qG-yW-Xwv">
+                                        <rect key="frame" x="0.0" y="250" width="248.5" height="0.0"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1KA-2X-73K">
-                                <rect key="frame" x="5" y="5" width="195.5" height="250"/>
+                                <rect key="frame" x="5" y="5" width="248.5" height="250"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <action selector="imageTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="1ee-IX-10U"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xHO-Tl-t6y" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
-                                <rect key="frame" x="79.5" y="116" width="47" height="47"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="xHO-Tl-t6y" secondAttribute="height" multiplier="1:1" id="P9v-ZD-v8j"/>
-                                    <constraint firstAttribute="width" constant="47" id="mSl-ID-Qi8"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Hq-r3-X1b">
-                                <rect key="frame" x="154.5" y="262" width="26.5" height="12"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="readMsgTick" translatesAutoresizingMaskIntoConstraints="NO" id="glw-ee-aad" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
-                                <rect key="frame" x="183.5" y="262.5" width="17" height="11"/>
-                            </imageView>
                             <button hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a3W-Oj-Py4">
-                                <rect key="frame" x="53" y="110" width="100" height="40"/>
+                                <rect key="frame" x="79" y="110" width="100" height="40"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="EaX-T2-QAg"/>
@@ -73,37 +66,54 @@
                                     <action selector="retryButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="RHv-eg-5lQ"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xHO-Tl-t6y" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
+                                <rect key="frame" x="105.5" y="159.5" width="47" height="47"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="xHO-Tl-t6y" secondAttribute="height" multiplier="1:1" id="P9v-ZD-v8j"/>
+                                    <constraint firstAttribute="width" constant="47" id="mSl-ID-Qi8"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Hq-r3-X1b">
+                                <rect key="frame" x="207.5" y="349" width="26.5" height="12"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="readMsgTick" translatesAutoresizingMaskIntoConstraints="NO" id="glw-ee-aad" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
+                                <rect key="frame" x="236.5" y="349.5" width="17" height="11"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="1KA-2X-73K" firstAttribute="trailing" secondItem="8x2-sk-JrP" secondAttribute="trailing" id="0uQ-m1-9gY"/>
-                            <constraint firstItem="8x2-sk-JrP" firstAttribute="top" secondItem="GYS-uX-poV" secondAttribute="top" constant="5" id="1EQ-C8-tVe"/>
                             <constraint firstItem="glw-ee-aad" firstAttribute="leading" secondItem="4Hq-r3-X1b" secondAttribute="trailing" constant="2.5" id="4SB-GO-v7j"/>
-                            <constraint firstItem="1KA-2X-73K" firstAttribute="leading" secondItem="8x2-sk-JrP" secondAttribute="leading" id="C37-51-Dhe"/>
+                            <constraint firstItem="1KA-2X-73K" firstAttribute="top" secondItem="8x2-sk-JrP" secondAttribute="top" id="8jv-ML-Ra5"/>
+                            <constraint firstAttribute="trailing" secondItem="cA8-f9-uGn" secondAttribute="trailing" constant="5" id="E2s-W4-5ZR"/>
                             <constraint firstAttribute="bottom" secondItem="4Hq-r3-X1b" secondAttribute="bottom" constant="5" id="EWh-Yr-7es"/>
+                            <constraint firstItem="4Hq-r3-X1b" firstAttribute="top" relation="greaterThanOrEqual" secondItem="cA8-f9-uGn" secondAttribute="bottom" constant="5" id="HSf-aX-kxj"/>
                             <constraint firstItem="4Hq-r3-X1b" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="GYS-uX-poV" secondAttribute="leading" constant="30" id="Ixh-f1-nDS"/>
-                            <constraint firstItem="4Hq-r3-X1b" firstAttribute="top" relation="greaterThanOrEqual" secondItem="8x2-sk-JrP" secondAttribute="bottom" constant="2.5" id="YBT-rH-rYh"/>
-                            <constraint firstItem="glw-ee-aad" firstAttribute="top" relation="greaterThanOrEqual" secondItem="8x2-sk-JrP" secondAttribute="bottom" constant="2.5" id="egT-W4-yg5"/>
-                            <constraint firstItem="a3W-Oj-Py4" firstAttribute="centerX" secondItem="8x2-sk-JrP" secondAttribute="centerX" id="hcd-pU-4wJ"/>
-                            <constraint firstItem="8x2-sk-JrP" firstAttribute="leading" secondItem="GYS-uX-poV" secondAttribute="leading" constant="5" id="iOU-DC-U19"/>
+                            <constraint firstItem="1KA-2X-73K" firstAttribute="trailing" secondItem="8x2-sk-JrP" secondAttribute="trailing" id="Npy-pc-soA"/>
+                            <constraint firstItem="1KA-2X-73K" firstAttribute="bottom" secondItem="8x2-sk-JrP" secondAttribute="bottom" id="W6o-GS-AUk"/>
+                            <constraint firstItem="cA8-f9-uGn" firstAttribute="top" secondItem="GYS-uX-poV" secondAttribute="top" constant="5" id="aWg-c8-LuH"/>
+                            <constraint firstItem="1KA-2X-73K" firstAttribute="leading" secondItem="8x2-sk-JrP" secondAttribute="leading" id="dOB-mS-uCp"/>
+                            <constraint firstItem="a3W-Oj-Py4" firstAttribute="centerY" secondItem="8x2-sk-JrP" secondAttribute="centerY" id="l9e-bi-q76"/>
                             <constraint firstItem="glw-ee-aad" firstAttribute="centerY" secondItem="4Hq-r3-X1b" secondAttribute="centerY" id="mBm-PQ-ez7"/>
-                            <constraint firstItem="1KA-2X-73K" firstAttribute="bottom" secondItem="8x2-sk-JrP" secondAttribute="bottom" id="maL-2d-k3e"/>
+                            <constraint firstItem="a3W-Oj-Py4" firstAttribute="centerX" secondItem="8x2-sk-JrP" secondAttribute="centerX" id="mLW-YQ-n7g"/>
                             <constraint firstItem="xHO-Tl-t6y" firstAttribute="centerX" secondItem="GYS-uX-poV" secondAttribute="centerX" id="pWL-28-PsN"/>
-                            <constraint firstItem="a3W-Oj-Py4" firstAttribute="centerY" secondItem="8x2-sk-JrP" secondAttribute="centerY" id="pqF-tc-dbX"/>
-                            <constraint firstItem="1KA-2X-73K" firstAttribute="top" secondItem="8x2-sk-JrP" secondAttribute="top" id="qrM-9l-Goa"/>
                             <constraint firstItem="xHO-Tl-t6y" firstAttribute="centerY" secondItem="GYS-uX-poV" secondAttribute="centerY" id="rao-kc-AFe"/>
-                            <constraint firstAttribute="trailing" secondItem="8x2-sk-JrP" secondAttribute="trailing" constant="5" id="xkt-Mn-dzx"/>
+                            <constraint firstItem="cA8-f9-uGn" firstAttribute="leading" secondItem="GYS-uX-poV" secondAttribute="leading" constant="5" id="svf-21-hk8"/>
                             <constraint firstAttribute="trailing" secondItem="glw-ee-aad" secondAttribute="trailing" constant="5" id="yWY-lZ-GKT"/>
                         </constraints>
                     </view>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iSM-I8-9Rs" userLabel="PropotionView">
-                        <rect key="frame" x="0.0" y="139" width="106.5" height="10"/>
+                        <rect key="frame" x="0.0" y="182.5" width="133.5" height="10"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="10" id="mfW-cD-hCG"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nmw-of-K4y">
-                        <rect key="frame" x="79.5" y="259" width="25" height="25"/>
+                        <rect key="frame" x="106.5" y="346" width="25" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="RAH-dl-hAK"/>
                             <constraint firstAttribute="width" secondItem="nmw-of-K4y" secondAttribute="height" multiplier="1:1" id="eQj-O9-flA"/>
@@ -135,11 +145,12 @@
                 <outlet property="retryButton" destination="a3W-Oj-Py4" id="uzn-jt-jco"/>
                 <outlet property="shadowView" destination="JbQ-pg-ytD" id="FdG-GN-g4j"/>
                 <outlet property="sourceIcon" destination="nmw-of-K4y" id="BCP-MH-Yhe"/>
+                <outlet property="textView" destination="4qG-yW-Xwv" id="mcy-ag-F89"/>
                 <outlet property="thumbnailImageView" destination="8x2-sk-JrP" id="Zgl-7d-dzD"/>
                 <outlet property="timeLabel" destination="4Hq-r3-X1b" id="tLL-02-3uD"/>
                 <outlet property="topConstraint" destination="l27-DS-eqm" id="Fl7-6D-Bt4"/>
             </connections>
-            <point key="canvasLocation" x="139" y="118"/>
+            <point key="canvasLocation" x="173" y="105"/>
         </tableViewCell>
     </objects>
     <resources>
